Bug 1107718: Properly deal with a D3D11 device reset. r=nical